# Loose-screw

./: README.md  socket_wrench.stl
arm7dof/arm7dof_model/: arm7dof_model.xacro  arm7dof_model_w_wrench.xacro
arm7dof/arm7dof_model/config/: arm7dof_jnt_traj_ctl.yaml  arm7dof_jnt_traj_ctl.yaml~
arm7dof/arm7dof_model/launch/: arm7dof_w_jnt_traj_ctl.launch
circle_as/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
circle_as/action/: circular_path.action  circular_path.action~  perception.action~
circle_as/src/: circle_action_client.cpp  circle_action_client.cpp~  perception_server.cpp  pose_in_circle_server.cpp  pose_in_circle_server.cpp~
pcl_utils/: package.xml
screw_loose/: CMakeLists.txt  package.xml
screw_loose/action/: perception.action
screw_loose/src/: circle_action_test.cpp  circle_action_test.cpp~
