<?xml version="1.0"?>
<package>
    <name>circle_action</name>
    <version>0.0.0</version>
    <description>The circle_action package</description>
  
    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <!-- Example:  -->
    <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
    <maintainer email="surag@todo.todo">surag</maintainer>

    <!-- One license tag required, multiple allowed, one license per tag -->
    <!-- Commonly used license strings: -->
    <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
    <license>TODO</license>


    <!-- Url tags are optional, but mutiple are allowed, one per tag -->
    <!-- Optional attribute type can be: website, bugtracker, or repository -->
    <!-- Example: -->
    <!-- <url type="website">http://ros.org/wiki/jacobian_publisher</url> -->


    <!-- Author tags are optional, mutiple are allowed, one per tag -->
    <!-- Authors do not have to be maintianers, but could be -->
    <!-- Example: -->
    <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


    <!-- The *_depend tags are used to specify dependencies -->
    <!-- Dependencies can be catkin packages or system dependencies -->
    <!-- Examples: -->
    <!-- Use build_depend for packages you need at compile time: -->
    <!--   <build_depend>message_generation</build_depend> -->
    <!-- Use buildtool_depend for build tool packages: -->
    <!--   <buildtool_depend>catkin</buildtool_depend> -->
    <!-- Use run_depend for packages you need at runtime: -->
    <!--   <run_depend>message_runtime</run_depend> -->
    <!-- Use test_depend for packages you need only for testing: -->
    <!--   <test_depend>gtest</test_depend> -->
    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <!--<build_depend>actionlib_msgs</build_depend> -->
    <build_depend>simple_action_client</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>actionlib</build_depend>
    <build_depend>tf</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>nav_msgs</build_depend>
    <build_depend>arm7dof_fk_ik</build_depend>
    <build_depend>joint_space_planner</build_depend>
    <build_depend>pcl_ros</build_depend>
	<build_depend>pcl_conversions</build_depend>
  	<build_depend>libpcl-all-dev</build_depend>
  	<build_depend>pcl_msgs</build_depend>
	<build_depend>sensor_msgs</build_depend>
    <build_depend>xform_utils</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>pcl_utils</build_depend>

    <!-- <build_depend>actionlib_servers</build_depend> -->
   
    <run_depend>roscpp</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>actionlib</run_depend>
    <!--  <run_depend>actionlib_servers</run_depend> -->
    <!-- <run_depend>actionlib_msgs</run_depend> -->
    <run_depend>simple_action_client</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>tf</run_depend>
	<run_depend>geometry_msgs</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>nav_msgs</run_depend>
	<run_depend>arm7dof_fk_ik</run_depend>
	<run_depend>joint_space_planner</run_depend>
	<run_depend>pcl_ros</run_depend>
	<run_depend>pcl_conversions</run_depend>
	<run_depend>libpcl-all</run_depend>
	<run_depend>pcl_msgs</run_depend>
	<run_depend>xform_utils</run_depend>
	<run_depend>sensor_msgs</run_depend>
    <run_depend>pcl_utils</run_depend>
    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- You can specify that this package is a metapackage here: -->
        <!-- <metapackage/> -->

        <!-- Other tools can request additional information be placed here -->
    </export>
</package>
    
